--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,17 @@
             <artifactId>hibernate-search</artifactId>
             <version>4.1.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+ 
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.5</version>
+        </dependency>
       </dependencies>
 
     <properties>
