--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,44 +1,11 @@
-# DataSource settings: set here your own configurations for the database
-# connection. In this example we have "netgloo_blog" as database name and
-# "root" as username and password.
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultComponentSafeNamingStrategy
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show_sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/jobportal
+spring.datasource.username=root
+spring.datasource.password=Dolly90#
 
-spring.datasource.url = jdbc:mysql://localhost:3306/jobportal?useSSL=false
-
-# Username and password
-spring.datasource.username = root
-spring.datasource.password = Dolly90#
-spring.datasource.driver:com.mysql.jdbc.Driver
-
-# Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
-
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-# spring.datasource.url = jdbc:mysql://localhost/netgloo_blog
-#spring.datasource.username = root
-#spring.datasource.password = Dolly90#
-
-# Keep the connection alive if idle for a long time (needed in production)
-#spring.datasource.testWhileIdle = true
-#spring.datasource.validationQuery = SELECT 1
-
-# Show or not log for each sql query
-#spring.jpa.show-sql = true
-
-# Hibernate ddl auto (create, create-drop, update)
-#spring.jpa.hibernate.ddl-auto = update
-
-# Naming strategy
-#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
-# stripped before adding them to the entity manager)
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+logging.level.org.springframework.web: ERROR
+logging.level.org.hibernate: ERROR
+spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
+spring.jpa.properties.hibernate.search.default.indexBase = /Users/ajaychhabria/lucene/indexes
